// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireAdminParametersForm /> renders correctly with isOnlyProjectAdmin 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.notifications"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_notification"
        name="acknowledgeReplies"
        type="checkbox"
      >
        <FormattedMessage
          id="admin.fields.questionnaire.acknowledge_replies"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.options"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_anonymous"
        name="anonymousAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="reply-anonymously"
          values={Object {}}
        />
      </Field>
      <Field
        component={[Function]}
        id="questionnaire_multiple"
        name="multipleRepliesAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="answer-several-times"
          values={Object {}}
        />
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="parameters-submit"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;

exports[`<QuestionnaireAdminParametersForm /> renders correctly with private result and anonymous allowed 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.notifications"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_notification"
        name="acknowledgeReplies"
        type="checkbox"
      >
        <FormattedMessage
          id="admin.fields.questionnaire.acknowledge_replies"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.options"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_anonymous"
        name="anonymousAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="reply-anonymously"
          values={Object {}}
        />
      </Field>
      <Field
        component={[Function]}
        id="questionnaire_multiple"
        name="multipleRepliesAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="answer-several-times"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="results"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_private"
        name="privateResult"
        type="radio"
        value="private"
      >
        <i
          className="cap-lock-2-1 mr-5"
        />
        <FormattedMessage
          id="administrators"
          values={Object {}}
        />
      </Field>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_public"
        name="privateResult"
        type="radio"
        value="public"
      >
        <i
          className="cap-chat-security mr-5"
        />
        <FormattedMessage
          id="persons-with-access-to-the-project"
          values={Object {}}
        />
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="parameters-submit"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;

exports[`<QuestionnaireAdminParametersForm /> renders correctly with private result and anonymous not allowed 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.notifications"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_notification"
        name="acknowledgeReplies"
        type="checkbox"
      >
        <FormattedMessage
          id="admin.fields.questionnaire.acknowledge_replies"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.options"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_anonymous"
        name="anonymousAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="reply-anonymously"
          values={Object {}}
        />
      </Field>
      <Field
        component={[Function]}
        id="questionnaire_multiple"
        name="multipleRepliesAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="answer-several-times"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="results"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_private"
        name="privateResult"
        type="radio"
        value="private"
      >
        <i
          className="cap-lock-2-1 mr-5"
        />
        <FormattedMessage
          id="administrators"
          values={Object {}}
        />
      </Field>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_public"
        name="privateResult"
        type="radio"
        value="public"
      >
        <i
          className="cap-chat-security mr-5"
        />
        <FormattedMessage
          id="persons-with-access-to-the-project"
          values={Object {}}
        />
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="parameters-submit"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;

exports[`<QuestionnaireAdminParametersForm /> renders correctly with public result and anonymous allowed 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.notifications"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_notification"
        name="acknowledgeReplies"
        type="checkbox"
      >
        <FormattedMessage
          id="admin.fields.questionnaire.acknowledge_replies"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.options"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_anonymous"
        name="anonymousAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="reply-anonymously"
          values={Object {}}
        />
      </Field>
      <Field
        component={[Function]}
        id="questionnaire_multiple"
        name="multipleRepliesAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="answer-several-times"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="results"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_private"
        name="privateResult"
        type="radio"
        value="private"
      >
        <i
          className="cap-lock-2-1 mr-5"
        />
        <FormattedMessage
          id="administrators"
          values={Object {}}
        />
      </Field>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_public"
        name="privateResult"
        type="radio"
        value="public"
      >
        <i
          className="cap-chat-security mr-5"
        />
        <FormattedMessage
          id="persons-with-access-to-the-project"
          values={Object {}}
        />
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="parameters-submit"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;

exports[`<QuestionnaireAdminParametersForm /> renders correctly with public result and anonymous not allowed 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.notifications"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_notification"
        name="acknowledgeReplies"
        type="checkbox"
      >
        <FormattedMessage
          id="admin.fields.questionnaire.acknowledge_replies"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="global.options"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        component={[Function]}
        id="questionnaire_anonymous"
        name="anonymousAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="reply-anonymously"
          values={Object {}}
        />
      </Field>
      <Field
        component={[Function]}
        id="questionnaire_multiple"
        name="multipleRepliesAllowed"
        type="checkbox"
      >
        <FormattedMessage
          id="answer-several-times"
          values={Object {}}
        />
      </Field>
      <div
        className="box-header"
      >
        <h3
          className="box-title"
        >
          <FormattedMessage
            id="results"
            values={Object {}}
          />
        </h3>
      </div>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_private"
        name="privateResult"
        type="radio"
        value="private"
      >
        <i
          className="cap-lock-2-1 mr-5"
        />
        <FormattedMessage
          id="administrators"
          values={Object {}}
        />
      </Field>
      <Field
        checked={false}
        component={[Function]}
        id="questionnaire_public"
        name="privateResult"
        type="radio"
        value="public"
      >
        <i
          className="cap-chat-security mr-5"
        />
        <FormattedMessage
          id="persons-with-access-to-the-project"
          values={Object {}}
        />
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="parameters-submit"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={true}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={true}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;
